package LLD.TicTacToe.model;

public enum PlayerType {
    X,
    O
}
